# slinger

./: .gitignore  README.md  example-postman-collection.json  index.html  install.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: go-api-implementation-guide.md
frontend/: index.html  package-lock.json  package.json  package.json.md5  tailwind.config.js
frontend/src/components/request/: RequestBuilder.svelte
src/: App.svelte  App.tsx  cloud.ts  main.ts  styles.css  tauri.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  domain.rs  main.rs
src/components/: AuthTemplateInput.svelte  BuiltinVariableMenu.svelte  CloudToolsPanel.svelte  CodeSnippetTab.svelte  CollectionRunnerDialog.svelte  CollectionTree.svelte  CollectionTree.tsx  ConfirmDialog.svelte  EnvironmentToolsPanel.svelte  ExportCollectionDialog.svelte  FolderNode.svelte  Header.svelte  Header.tsx  JSONEditorWrapper.svelte  JSONEditorWrapper.tsx  PayloadViewer.svelte  PayloadViewer.tsx  RequestActiveTab.svelte  RequestActiveTab.tsx  RequestAuthorizationTab.svelte  RequestHeadersTable.svelte  RequestPane.svelte  RequestPane.tsx  RequestTable.svelte  RequestTreeItem.svelte  RightUtilitySidebar.svelte  SaveRequestDialog.svelte  SaveResponseDialog.svelte  Sidebar.svelte  Sidebar.tsx  Toast.svelte  Toolbar.svelte  Toolbar.tsx  WorkspacePanel.svelte  WorkspacePanel.tsx  WorkspaceVersioningDialog.svelte
src/hooks/: useAppPreferences.ts  useRequestWorkspace.ts  useResponseSplitter.ts  useWorkspaceData.ts
src/lib/: authDocument.ts  builtinVariables.ts  codeSnippets.ts  collectionTree.ts  payloadFormatters.ts  postmanExport.ts  requestDocument.ts
