[package]
name = "slinger-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
keyring = "3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tauri = { version = "2.5.1", features = ["api-all"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v7", "serde"] }
